--- a/client-src/Categories/Home.module.scss
+++ b/client-src/Categories/Home.module.scss
@@ -1,17 +1,3 @@
-.categories {
-  display: grid;
-  height: 100%;
-  width: 100%;
-  user-select: none;
-  -webkit-user-select: none;
-  grid-template-rows: max-content minmax(0, 1fr);
-  grid-template-columns: minmax(0, 1fr);
-  padding-top: 0.25rem;
-  padding-left: 0.25rem;
-  color: var(--text-color);
-  background-color: var(--page-color);
-}
-
 .theme {
   background-color: #8e2727;
 }
