--- a/client-src/NavigationView.module.scss
+++ b/client-src/NavigationView.module.scss
@@ -39,8 +39,7 @@
 .wrapper {
   position: relative;
   font-size: 1.25rem;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
 }
 
 .off-canvas {
